# saa-sdk

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  SUPPORT.md  __init__.py  engine.py  factory.py  llms.txt  main.py  package.json  pyproject.toml  types.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
assets/badges/: README.md
assets/diagrams/: README.md
assets/social/: README.md
examples/: README.md
examples/_shared/: __init__.py  session_log.py
examples/elevenlabs/: .env.example  README.md
examples/elevenlabs/voice_agent/: README.md  agent.py  requirements.txt  tui.py
examples/livekit/: .env.example  README.md
examples/livekit/voice_agent_cascaded/: README.md
examples/livekit/voice_agent_realtime/: .env.example  README.md  agent.py  requirements.txt
examples/livekit/web/: .env.example  README.md  app.js  index.html  requirements.txt  styles.css  token_server.py
examples/pipecat/: README.md
examples/pipecat/web/: .env.example  README.md  app.js  index.html  requirements.txt  styles.css  token_server.py  turn-parser.js  voice_agent.py
examples/python/: README.md  main.py  pyproject.toml
examples/twilio/: .env.example  README.md
examples/twilio/media_streams/: README.md  audio.py  bridge.py  bridge_deepgram_openai_elevenlabs.py  bridge_openai_realtime.py  outbound.py  requirements.txt  server.py  (+1 more)
examples/vapi/: .env.example  README.md
examples/web/: README.md  app.js  index.html  llm.js  package.json  styles.css
src/: capture.ts  client.ts  types.ts  url.ts  ws-protocol.ts
src/saa/: __init__.py  capture.py  client.py
(+3 files in other folders)
